--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "John",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "path": "^0.12.7",
     "request": "^2.81.0"
