--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "path": "^0.12.7",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "ejs": "^2.5.6"
   }
 }
