--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "ejs": "^2.5.7",
     "express": "^4.15.3",
     "path": "^0.12.7",
-    "request": "^2.81.0",
-    "ejs": "^2.5.6"
+    "request": "^2.81.0"
   }
 }
